Fix of stats after fixing the reservation form
I have fix the stats that after fixing the reservation form does not work well as it was divided by hours and not half an hour.